fixed z-index

--- a/styles/_mobile-menu.sass
+++ b/styles/_mobile-menu.sass
@@ -8,7 +8,7 @@
   display: flex
   justify-content: space-between
   transition: .3s
-  z-index: 1000
+  z-index: 2
 .mobile-menu.active
   right: 0
 
@@ -42,7 +42,7 @@
   background: rgba(52, 58, 64, 0.5)
   line-height: 50px
   border-radius: .25rem
-  z-index: 999
+  z-index: 3
   padding: 15px
   cursor: pointer
   transition: .3s
